# qualifire-python-sdk

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cookiecutter-config-file.yml  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: question.md
.github/workflows/: build.yml  python-publish.yml
docker/: Dockerfile  README.md
qualifire/: __init__.py  client.py  consts.py  tracer_init.py  types.py  utils.py
qualifire/instrumentations/: __init__.py  base_instrumentor.py  openai_instrumentor.py
qualifire/instrumentations/openai/: __init__.py
qualifire/instrumentations/openai/shared/: __init__.py  qualifire_logger.py  wrappers.py
qualifire/instrumentations/openai/v0/: __init__.py  openai_instrumentor.py
qualifire/instrumentations/openai/v1/: openai_instrumentor.py
tests/: test_types.py  test_utils.py
tests/test_example/: test_hello.py
