[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qualifire"
version = "0.13.0"
description = "Qualifire Python SDK"
authors = [{ name = "qualifire-dev", email = "dror@qualifire.ai" }]
requires-python = ">=3.8,<4"
readme = "README.md"
license = "MIT"
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pydantic>=2.10.6",
    "traceloop-sdk==0.40.4 ; python_version >= '3.10'",
    "types-requests>=2.32.0.20241016",
]

[project.urls]
Homepage = "https://github.com/qualifire-dev/qualifire"
Repository = "https://github.com/qualifire-dev/qualifire"

[dependency-groups]
dev = [
    "bandit>=1.7.1,<2",
    "black>=22.3.0,<23",
    "darglint>=1.8.1,<2",
    "isort[colors]>=5.10.1,<6",
    "mypy>=1.0,<2",
    "mypy-extensions>=1.0.0,<2",
    "pre-commit>=3.4.0,<4",
    "pydocstyle>=6.1.1,<7",
    "pylint>=2.11.1,<3",
    "pytest>=7.0.0,<8",
    "pytest-html>=4.0.1,<5",
    "pyupgrade>=3.8.0,<4",
    "safety>=2.3.5,<3",
    "coverage>=7.3.1,<8",
    "coverage-badge>=1.1.0,<2",
    "pytest-cov>=4.1.0,<5",
    "openai>=2.2.0",
]

[tool.hatch.build.targets.sdist]
include = ["qualifire"]

[tool.hatch.build.targets.wheel]
include = ["qualifire"]

[tool.black]
# https://github.com/psf/black
target-version = ["py38"]
line-length = 88
color = true

exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | env
    | venv
)/
'''

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 38
line_length = 88

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
# https://mypy.readthedocs.io/en/latest/config_file.html#using-a-pyproject-toml-file
python_version = 3.8
pretty = true
show_traceback = true
color_output = true

allow_redefinition = false
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
ignore_missing_imports = true
implicit_reexport = false
no_implicit_optional = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true


[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
# Directories that are not visited by pytest collector:
norecursedirs =["hooks", "*.egg", ".eggs", "dist", "build", "docs", ".tox", ".git", "__pycache__"]
doctest_optionflags = ["NUMBER", "NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

# Extra options:
addopts = [
  "--strict-markers",
  "--tb=short",
  "--doctest-modules",
  "--doctest-continue-on-failure",
]

[tool.coverage.run]
source = ["tests"]

[coverage.paths]
source = "qualifire"

[coverage.run]
branch = true

[coverage.report]
fail_under = 50
show_missing = true
